# jassimp-build

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Readme.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
src/jassimp/: IHMCJassimp.java
src/main/java/jassimp/: IHMCJassimpNativeLibraryLoader.java
